workspace/DevP360/src/objects/Patient_Consent__c.object
<CustomObject>
    <fields>
        <fullName>Demographic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demographic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Consents (Partner)</relationshipLabel>
        <relationshipName>Patients_Consent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Consents</relationshipLabel>
        <relationshipName>Patient_Consents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Patient Consent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Consents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>